--- a/index.html
+++ b/index.html
@@ -76,64 +76,96 @@
                 </div>
         </section>
             <div class="hebergements-and-populaires">
-
-                <section class="hebergements">
-                    <div class="hebergements-title" id="hebergements">
-                        <h2 class="section-title">Hébergements à Marseille</h2>
+                <section class="hebergements" id="hebergements">
+                    <h2>Hébergements à Marseille</h2>
+                    <div class="grid-hebergements">
+                    <div class="item card1"><div class ="card"><div class="card-content">
+                        <img src="./images/hebergements/fred-kleber.jpg" alt="Photo d'une chambre de l'hôtel du port">
+                        <h3>Hôtel du port</h3>
+                        <p>Nuit à partir de 52<span class="euro">€</span></p>
+                        <div class="card-rating">
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note de 4 sur 5</span>
+                        </div>
+                        </div>
                     </div>
-                    <div class="hebergements-cards">
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hebergements/fred-kleber.jpg" alt="Photo d'une chambre de l'hôtel du port">
-                                <div class="card-content">
-                                    <h3 class="card-title">Hôtel du port</h3>
-                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hebergements/fred-kleber.jpg" alt="Photo d'une chambre de l'hôtel du port">
-                                <div class="card-content">
-                                    <h3 class="card-title">Hôtel du port</h3>
-                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
-                                <img src="./images/hebergements/fred-kleber.jpg" alt="Photo d'une chambre de l'hôtel du port">
-                                <div class="card-content">
-                                    <h3 class="card-title">Hôtel du port</h3>
-                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
-                                    <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
                     </div>
+                    <div class="item card2"><div class ="card">
+                        <img src="./images/hebergements/febrian-zakaria.jpg" alt="Photo d'une chambre de l'hôtel chez Amina">
+                        <h3>Hôtel chez Amina</h3>
+                        <p>Nuit à partir de 96<span class="euro">€</span></p>
+                        <div class="card-rating">
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note de 4 sur 5</span>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="item card3"><div class ="card">
+                        <img src="./images/hebergements/reisetopia.jpg" alt="Photo d'une chambre de l'hôtel les mouettes">    
+                        <h3>Hôtel Les mouettes</h3>
+                        <p>Nuit à partir de 76<span class="euro">€</span></p>
+                        <div class="card-rating">
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note de 4 sur 5</span>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="item card4"><div class ="card">
+                        <img src="./images/hebergements/annie-spratt.jpg" alt="Photo d'une chambre de l'hôtel de la mer">
+                        <h3>Hôtel de la mer</h3>
+                        <p>Nuit à partir de 46<span class="euro">€</span></p>
+                        <div class="card-rating">
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note de 4 sur 5</span>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="item card5"><div class ="card">
+                        <img src="./images/hebergements/marcus-loke.jpg" alt="Photo d'une chambre de l'auberge de la Canebière">
+                        <h3>Auberge La Canebière</h3>
+                        <p>Nuit à partir de 25<span class="euro">€</span></p>
+                        <div class="card-rating">
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note de 4 sur 5</span>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="item card6"><div class ="card">
+                        <img src="./images/hebergements/nicate-lee.jpg" alt="Photo d'une chambre de l'auberge le Panier">
+                        <h3>Le Panier</h3> 
+                        <p>Nuit à partir de 23<span class="euro">€</span></p>
+                        <div class="card-rating">
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note de 4 sur 5</span>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <a class="afficherplus" href="#">Afficher plus</a>
                 </section>
 
                 <section class="populaires">
@@ -200,8 +232,70 @@
                     </div>
                 </section>
             </div>
+            <section class="activites" id="activites">
+                <h2 style="margin-bottom: 30px;">Activités à Marseille</h2>
+            <div class="activites-container">
+                <div class="activites-card-container">
+                    <div class="activites-card activite1">
+                        <a href="#">
+                        <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux port">
+                        <h3>Vieux Port</h3>
+                        </a>
+                    </div>
+                </div>
+            <div class="activites-card-container">
+                <div class="activites-card activite1">
+                    <a href="#">
+                    <img src="./images/activites/paul-hermann.jpg" alt="Photo du fort de Pomègues">
+                    <h3>Fort de Pomègues</h3>
+                    </a>
+                </div>
+            </div>
+            <div class="activites-card-container">
+                <div class="activites-card activite1">
+                    <a href="#">
+                    <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du parc national des Calanques">
+                    <h3>Parc national des Calanques</h3>
+                    </a>
+                </div>
+            </div>
+            <div class="activites-card-container">
+                <div class="activites-card activite1">
+                    <a href="#">
+                        <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </a>
+                </div>
+            </div>
+        </div>
+            </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer-container container">
+                <article>
+                    <h2>À propos</h2>
+                    <ul>
+                        <li><a href="#">Fonctionnement du site</li>
+                        <li><a href="#">Conditions genérales</li>
+                        <li><a href="#">Donées et confidentialité</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Nos hébergements</h2>
+                    <ul>
+                        <li><a href="#">Charte qualité</li>
+                        <li><a href="#">Proposer votre hôtel</li>
+                    </ul>
+                </article>
+                <article>
+                    <h2>Assistance</h2>
+                    <ul>
+                        <li><a href="#">Centre d'aide</li>
+                        <li><a href="#">Nous contacter</li>
+                    </ul>
+                </article>
+            </div>
+        </footer>
     </div>
 </body>
 
