--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="main-container">
         <header>
-            <div class="header-container" style="height: 79px;">
+            <div class="header-container">
                 <a href="#"><img src="./images/logo/Booki@3x.png" alt="Logo du site Booki" width="60" height="20"></a>
                 <nav class="header-nav">
                     <ul class="header-nav-list">
@@ -79,6 +79,7 @@
                 <section class="hebergements" id="hebergements">
                     <h2>Hébergements à Marseille</h2>
                     <div class="grid-hebergements">
+                        <a href="#">
                     <div class="item card1"><div class ="card"><div class="card-content">
                         <img src="./images/hebergements/fred-kleber.jpg" alt="Photo d'une chambre de l'hôtel du port">
                         <h3>Hôtel du port</h3>
@@ -94,6 +95,8 @@
                         </div>
                     </div>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="item card2"><div class ="card">
                         <img src="./images/hebergements/febrian-zakaria.jpg" alt="Photo d'une chambre de l'hôtel chez Amina">
                         <h3>Hôtel chez Amina</h3>
@@ -108,6 +111,8 @@
                         </div>
                     </div>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="item card3"><div class ="card">
                         <img src="./images/hebergements/reisetopia.jpg" alt="Photo d'une chambre de l'hôtel les mouettes">    
                         <h3>Hôtel Les mouettes</h3>
@@ -122,6 +127,8 @@
                         </div>
                     </div>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="item card4"><div class ="card">
                         <img src="./images/hebergements/annie-spratt.jpg" alt="Photo d'une chambre de l'hôtel de la mer">
                         <h3>Hôtel de la mer</h3>
@@ -136,6 +143,8 @@
                         </div>
                     </div>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="item card5"><div class ="card">
                         <img src="./images/hebergements/marcus-loke.jpg" alt="Photo d'une chambre de l'auberge de la Canebière">
                         <h3>Auberge La Canebière</h3>
@@ -150,6 +159,8 @@
                         </div>
                     </div>
                     </div>
+                    </a>
+                    <a href="#">
                     <div class="item card6"><div class ="card">
                         <img src="./images/hebergements/nicate-lee.jpg" alt="Photo d'une chambre de l'auberge le Panier">
                         <h3>Le Panier</h3> 
@@ -164,6 +175,7 @@
                         </div>
                     </div>
                     </div>
+                    </a>
                 </div>
                 <a class="afficherplus" href="#">Afficher plus</a>
                 </section>
@@ -252,7 +264,7 @@
                 </div>
             </div>
             <div class="activites-card-container">
-                <div class="activites-card activite1">
+                <div class="activites-card activite2">
                     <a href="#">
                     <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du parc national des Calanques">
                     <h3>Parc national des Calanques</h3>
@@ -260,7 +272,7 @@
                 </div>
             </div>
             <div class="activites-card-container">
-                <div class="activites-card activite1">
+                <div class="activites-card activite2">
                     <a href="#">
                         <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde">
                         <h3>Notre-Dame-de-la-Garde</h3>
