--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -287,23 +287,23 @@
                 <article>
                     <h2>À propos</h2>
                     <ul>
-                        <li><a href="#">Fonctionnement du site</li>
-                        <li><a href="#">Conditions genérales</li>
-                        <li><a href="#">Donées et confidentialité</li>
+                        <li><a href="#">Fonctionnement du site</a></li>
+                        <li><a href="#">Conditions genérales</a></li>
+                        <li><a href="#">Donées et confidentialité</a></li>
                     </ul>
                 </article>
                 <article>
                     <h2>Nos hébergements</h2>
                     <ul>
-                        <li><a href="#">Charte qualité</li>
-                        <li><a href="#">Proposer votre hôtel</li>
+                        <li><a href="#">Charte qualité</a></li>
+                        <li><a href="#">Proposer votre hôtel</a></li>
                     </ul>
                 </article>
                 <article>
                     <h2>Assistance</h2>
                     <ul>
-                        <li><a href="#">Centre d'aide</li>
-                        <li><a href="#">Nous contacter</li>
+                        <li><a href="#">Centre d'aide</a></li>
+                        <li><a href="#">Nous contacter</a></li>
                     </ul>
                 </article>
             </div>
