--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
                             <article class="card">
                                 <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-                                    <h3 class="card-title">Hôtel Le soleil du matin</h3>
-                                    <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
+                                    <div class="card-txt">
+                                        <h3 class="card-title">Hôtel Le soleil du matin</h3>
+                                        <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
+                                    </div>
                                     <div class="card-rating">
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -245,7 +247,7 @@
                 </section>
             </div>
             <section class="activites" id="activites">
-                <h2 style="margin-bottom: 30px;">Activités à Marseille</h2>
+                <h2>Activités à Marseille</h2>
             <div class="activites-container">
                 <div class="activites-card-container">
                     <div class="activites-card activite1">
