Fin du projet booki

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <div class="header-container">
-                <a href="#"><img src="./images/logo/Booki@3x.png" alt="Logo du site Booki" width="60" height="20"></a>
+                <a href="#"><img src="./images/logo/Booki@3x.png" alt="Logo du site Booki"></a>
                 <nav class="header-nav">
                     <ul class="header-nav-list">
                         <li><a href="#hebergements">Hébergements</a></li>
